# open-invaders

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
data/: settings.ini  spritesheet.csv
include/config/: config.h.in
include/core/: Settings.h  game.h  player.h  settings.h
src/: main.cc
src/core/: game.cc  player.cc  settings.cc
templates/: pimpl_header.template  pimpl_source.template
